--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </p>
         </figure>
 
-        <input type="checkbox" id="doAm"><input>
+        <input type="checkbox" id="doAm"></input>
         <script>
             const eraWidget = new EraWidget();
             let config = null;
