--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             
                 series: [{
                     name: 'Speed',
-                    data: [80],
+                    data: doAmValue,
                     tooltip: {
                         valueSuffix: ' km/h'
                     },
