--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     const point = chart.series[0].points[0],
                         inc = doAmValue;
             
-                    let newVal = point.y + inc;
+                    let newVal = inc;
                     if (newVal < 0 || newVal > 200) {
                         newVal = point.y - inc;
                     }
