--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         .highcharts-data-table thead tr,
         .highcharts-data-table tr:nth-child(even) {
-            background: #a82c72;
+            background: #fff;
         }
 
         .highcharts-data-table tr:hover {
