--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <figure class="highcharts-figure">
         <div id="container"></div>
         <p class="highcharts-description">
-            Chart showing heartbeats data updating every second.
+            Biểu đồ thể hiện giá trị độ ẩm không khí cập nhật 1 giây 1 lần.
         </p>
         <button id="exportButton">Export to Excel</button>
     </figure>
@@ -198,7 +198,7 @@
             tooltip: {
                 headerFormat: '<b>{series.name}</b><br/>',
                 //pointFormat: '{point.x:%Y-%m-%d %H:%M:%S}<br/>{point.y:.2f}'
-                pointFormat: '{point.x:%d-%m-%Y %S:%M:%H}<br/>{point.y:.2f}'
+                pointFormat: '{point.x:%d-%m-%Y %S:%M:%H}<br/>{point.y:.2f%}'
             },
 
             legend: {
