--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             tooltip: {
                 headerFormat: '<b>{series.name}</b><br/>',
                 //pointFormat: '{point.x:%Y-%m-%d %H:%M:%S}<br/>{point.y:.2f}'
-                pointFormat: '{point.x:%d-%m-%Y %S:%M:%H}<br/>{point.y:.2f}'
+                pointFormat: '{point.x:%d-%m-%Y / %H:%M:%S}<br/>{point.y:.2f}'
             },
 
             legend: {
