--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <script src="https://www.unpkg.com/@eohjsc/era-widget@1.0.14/src/index.js"></script>
-    //<link rel="stylesheet" href="https://code.highcharts.com/css/highcharts.css">
+    <link rel="stylesheet" href="https://code.highcharts.com/css/highcharts.css">
     <style>
         .highcharts-figure,
         .highcharts-data-table table {
@@ -19,7 +19,7 @@
         }
 
         #container {
-            height: 400px;
+            height: 200px;
         }
 
         .highcharts-data-table table {
@@ -184,7 +184,7 @@
                     text: 'Giá trị độ ẩm'
                 },
                 min: 0, // Giá trị tối thiểu của trục Y
-                max: 100, // Giá trị tối đa của trục Y
+                max: 50, // Giá trị tối đa của trục Y
                 tickInterval: 10, // Khoảng cách giữa các dấu vạch trên trục Y
                 plotLines: [
                     {
