--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
             fill: var(--highcharts-color-2);
             stroke: var(--highcharts-color-2);
         }
+        button {
+            display: block;
+            margin: 1em auto;
+            padding: 0.5em 1em;
+            font-size: 1em;
+            background-color: #75cb7893;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+        
     </style>
 </head>
 <body>
